added optimized images and did more work on html+css

--- a/about.html
+++ b/about.html
@@ -30,8 +30,8 @@
 		</nav>
 	</div>
 
-		<div class="title">	
-		<h1>About The TRAA</h1></div>
+		<div class="title">
+			<h1>About The TRAA</h1></div>
 		<section id="about1">
 			<div id="aboutImageCon">
 				<div id="imageA1"></div>
@@ -77,13 +77,27 @@
 		</div>
 
 
+	<div class="divider"></div>
+	
+	<div class="title">
+		<h2>FUNDRAISING</h2>
+	</div>
 
-
-
-
-
-
-
+	<div id="fundraiser">
+		<h2>Efforts are underway to get the $$$ we need to continue many of the TRAA's most vital projects:</h2>
+			<div id="fundraiserImgs">
+				<div class="fundraiserImg"></div>
+				<div class="fundraiserImg"></div>
+				<div class="fundraiserImg"></div>
+			</div>
+			<div id="fundraiserTitles">
+				<div class="fundraiserTitle"><p>Improvements to the TRAA Trout Hatchery</p></div>
+				<div class="fundraiserTitle"><p>Continuation of the Salmonid Monitoring Program</p></div>
+				<div class="fundraiserTitle"><p>Funding the Komoka Creek Hydrological Study</p></div>
+			</div>
+			<div id="fundraiserText">
+			<p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
+		</div>
 	
 	<div id="footerNav">
 		<div>
