--- a/index.html
+++ b/index.html
@@ -31,27 +31,36 @@
 		</nav>
 	</div>
 
-		<div id="heroImg">
-		<div id="heroSlogan1"><p>Welcome to the Thames River Anglers Association</p></div>
-		<div id="heroSlogan2"><p>Dedication Today for Tomorrow</p></div>
+		<div class="hero">
+
+			<div id="heroSlogans">
+			<div id="heroSlogan1"><p>Welcome to the Thames River Anglers Association</p></div>
+			<div id="heroSlogan2"><p>Dedication Today for Tomorrow</p></div>
+			</div>
 		</div>
-		<div id="heroText"><p>For the enhancement, protection and promotion of a viable, multi-species fishery within the Thames River watershed.</p></div>
+
+			<div id="missionBG">
+			<div id="heroText">
+				<p>For the enhancement, protection and promotion of a viable, multi-species fishery within the Thames River watershed.</p>
+			</div>
+			</div>
+		
+		<div class="divider"></div>
 
 		<div id="memberships">
-			<div id="membershipImg"></div>
 			<div id="membershipText"><h2>MEMBERSHIPS
 			ARE DUE! </h2>
 			<p>You get to be a TRAA member for a whole year for only $25! Your membership also adds another voice to our efforts in protecting and enhancing aquatic habitats in the London & area community.
-			You’ve taken a lot of enjoyment from this unique fishery. It’s time togive back by being a part of the solution.</p></div>
+			You’ve taken a lot of enjoyment from this unique fishery. It’s time to give back by being a part of the solution.</p></div>
 		</div>
 
 	<div class="divider"></div>
-	
-	<div class="title">
-		<h2>FUNDRAISING</h2>
-	</div>
 
 	<div id="fundraiser">
+		<div id="fundraiserBlurb">
+			<div class="title">
+				<h2>FUNDRAISING</h2>
+			</div>
 		<h2>Efforts are underway to get the $$$ we need to continue many of the TRAA's most vital projects:</h2>
 			<div id="fundraiserImgs">
 				<div class="fundraiserImg"></div>
@@ -65,6 +74,7 @@
 			</div>
 			<div id="fundraiserText">
 			<p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
+		</div>
 		</div>
 
 	<div class="divider"></div>
