resized photos for web

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 			<h1>About The TRAA</h1></div>
 		<section id="about1">
 			<div id="aboutImageCon">
-				<div id="imageA1"></div>
+				<img src="images/about_1.png" alt="river clean-up">
 				<div id="imageA2"></div>
 			</div>
 			<div id="about1TextCon">
