--- a/Events.html
+++ b/Events.html
@@ -9,7 +9,9 @@
 <body>
 <div id="siteContainer">
 	<div id="mainNav">
-		<div id="logoContainer"></div>
+		<div id="logoContainer">
+			<img src="images/traa_logo.svg" alt=" traa logo">
+		</div>
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
@@ -29,6 +31,25 @@
 			</ul>
 		</nav>
 	</div>
+
+	<section id="titleSection">
+		<div id="eventTitles">
+			<h1>TRAA PAST EVENTS</h1>
+			<h2> Participate, Help Out, Have Fun </h2>
+			<h3> Events $ Activities are what the TRAA's all About!</h3>
+		</div>
+	</section>
+
+	
+	<div class="eventCon">
+		<div class="eventImages">
+			<img src="images/event1.png" alt="trees">
+			<img src="images/event2.png" alt="canoe under bridge">
+			<img src="images/event3.png" alt="bridge and river">	
+		</div>
+		<div class="eventText">
+			<
+
 
 
 
