--- a/about.html
+++ b/about.html
@@ -9,7 +9,9 @@
 <body>
 <div id="siteContainer">
 	<div id="mainNav">
-		<div id="logoContainer"></div>
+		<div id="logoContainer">
+			<img src="images/traa_logo.svg" alt=" traa logo">
+		</div>
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
@@ -34,8 +36,8 @@
 			<h1>About The TRAA</h1></div>
 		<section id="about1">
 			<div id="aboutImageCon">
-				<img src="images/about_1.png" alt="river clean-up">
-				<div id="imageA2"></div>
+				<img src="images/about1.png" alt="river clean-up">
+				<img src="images/about2.png" alt="scenic river release">
 			</div>
 			<div id="about1TextCon">
 				<section id="aboutTop">
@@ -61,8 +63,8 @@
 			<p>The TRAA has a history of always having a core group of active members supported by those who just want to be part of the solution. Either way, every member of the TRAA is active in their advocacy for the health of the Thames River watershed and its inhbitants.</p>
 		</div>	
 			<div id="about2ImageCon">
-			<div id="about2Image"></div>
-			<div id="about2Image2"></div>
+			<img src="images/about3.png" alt="young fish">
+			<img src="images/about4.png" alt="stream close-up">
 		</div>
 	</div>
 
@@ -86,9 +88,9 @@
 	<div id="fundraiser">
 		<h2>Efforts are underway to get the $$$ we need to continue many of the TRAA's most vital projects:</h2>
 			<div id="fundraiserImgs">
-				<div class="fundraiserImg"></div>
-				<div class="fundraiserImg"></div>
-				<div class="fundraiserImg"></div>
+				<img src="images/fund1.png" alt=" baby fish">
+				<img src="images/fund2.png" alt=" many baby fish">
+				<img src="images/fund3.png" alt=" small river">
 			</div>
 			<div id="fundraiserTitles">
 				<div class="fundraiserTitle"><p>Improvements to the TRAA Trout Hatchery</p></div>
