--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <div id="siteContainer">
 <h1 class="hidden">Thames River Anglers Association</h1>
 	<div id="mainNav">
-		<div id="logoContainer"></div>
+		<div id="logoContainer">
+		<img src="images/traa_logo.svg" alt=" traa logo">
+		</div>
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
