--- a/contact.html
+++ b/contact.html
@@ -9,20 +9,22 @@
 <body>
 <div id="siteContainer">
 	<div id="mainNav">
-		<img id="logoContainer" src="images/TRAAlogo.png" alt="TRAA logo">
+		<div id="logoContainer">
+		<img src="images/traa_logo.svg" alt=" traa logo">
+		</div>
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li>•</li>
 				<li><a href="about.html">About Us</a></li>
 				<li>•</li>
-				<li><a href="#">Past Events</a></li>
+				<li><a href="events.html">Past Events</a></li>
 				<li>•</li>
-				<li><a href="#">Projects</a></li>
+				<li><a href="projects.html">Projects</a></li>
 				<li>•</li>
-				<li><a href="#">Contact Us</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
 				<li>•</li>
-				<li><a href="#">More</a></li>
+				<li><a href="more.html">More</a></li>
 				<li>•</li>
 				<li><form><input type="search" placeholder="Search..."></form></li>
 				<li id="Sbutton"><a href="#">Search</a></li>
@@ -30,64 +32,84 @@
 		</nav>
 	</div>
 
-		<div class="title">	
-		<h1>About The TRAA</h1></div>
-		<section id="about1">
-			<div id="aboutImageCon">
-				<div id="imageA1"></div>
-				<div id="imageA2"></div>
+		<div class="extraSpace">
+		<div id="contactCon">
+			<div class="title">
+				<h2>Contact The Thames River Anglers Association</h2>
 			</div>
-			<div id="about1TextCon">
-				<section id="aboutTop">
-					<div class="title2">
-					<h2>The TRAA Works at a Grassroots Level Within the Thames River Watershed to</h2></div>
-					<p>•Protect, enhance and regenerate a viable, multi-species, year-round fishery.</p>
-					<p>•Promote and participate in environmental clean-up, pollution control and rehabilitation.</p>
-					<p>•Breed, relocate and stock to re-establish or augment appropriate species of fish.</p>
-					<p>•Promote environmentally sound sport fishing practices.</p>
-					<p>•Form partnerships with community businesses, government agencies, special interest groups, landowners, and other stakeholders in the Thames River watershed.</p>
-					<p>•Increase public awareness of the unique diversity of the Thames River Watershed, its challenges, its recreational opportunities and its vital importance to our community.</p>
-				</section>
+			<div id="contactTop">
+				<div id="contImageCon">
+					<img src="images/cont1.png" alt="traa members">
+					<img src="images/cont2.png" alt="foggy lake">
+				</div>
+				<div id="cont1TextCon">
+						<div id="subtitle"><p>There are a bunch of ways to get in touch with the TRAA</p></div>
+						<p>If you're with a like-minded organization or group looking for more information on the Thames River Anglers Association and its activities</p>
+						<div id="subtitle"><p>OR</p></div>
+						<p>If you're an individual who would like to become involved with the activities undertaken by the Thames River Anglers Association...</p>
+						<p>the Thames River Anglers Association would like to hear from you.</p>
 			</div>
-		</section>
-
-	<div class="divider"></div>
-		
-	<div id="about2">
-		<div id="about2TextCon">
-			<p>In the spring of 1986 the TRAA was formed by anglers concerned with the state of the fishery in the Thames River watershed, particularly the dwindling smallmouth bass population in the North Thames River.</p>
-			<p>The TRAA is not a fishing club, although most members are anglers and share fishing as a common interest. We are a "hands on" environmental group who likes to work at a grass roots level.</p>
-			<p>The TRAA is a volunteer organization, governed by a formal constitution and by-laws. An elected Executive, with the guidence of the General Membership, sets the policies and direction for the TRAA.</p>
-			<p>The TRAA has a history of always having a core group of active members supported by those who just want to be part of the solution. Either way, every member of the TRAA is active in their advocacy for the health of the Thames River watershed and its inhbitants.</p>
-		</div>	
-			<div id="about2ImageCon">
-			<div id="about2Image"></div>
-			<div id="about2Image2"></div>
 		</div>
 	</div>
+</div> 
+	<div class="divider"></div>
+		
+<div class="extraSpace">
+	<div id="cont2">
+		<div id="cont2TextCon">
+			<p>Come and talk to us at a TRAA General Meeting Guests are welcome!
+			<p>The TRAA meets every second Wednesday of each month. We always try to get the meetings started by 7:00pm so try to be there a few minutes beforehand. The venue is the Western Ontario Fish & Game Protective Association's clubhouse located just east of the Dearness Home on Southdale Road (East), on the North side of Southdale Road. The address is 790 Southdale Road East, London, Ontario.</p>
+			<p>Note: Every now and then we have "off-site" meetings. For example, the July and August meetings are "fishing meetings" so we won't be at WOFGPA clubhouse. Stay on top of these changes by visiting this Web site often.</p>
+			<p>TRAA SnailMail Send all those cards and letters (and cheques!) to:
+				Thames River Anglers Association
+				2202 Coronation Drive
+				London, Ontario
+				N6G 0B9 
+			</p>
+		</div>	
+		<div id="contactForm">
+			<form>
+				<label for="fname">First Name</label>
+				<input type="text" id="fname" name="firstname" placeholder="First Name..">
+
+				<label for="lname">Last Name</label>
+				<input type="text" id="lname" name="lastname" placeholder="Last Name..">
+
+				<label for="email">Email Address</label>
+				<input type="email" id="email" name="email" placeholder="Enter your email">
+
+				<label for="subject">Subject</label>
+				<input type="text" id="subject" name="subject" placeholder="Subject..">
+
+				<label for="message">Message</label>
+				<input type="text" id="message" name="message" placeholder="Enter your message..">
+			</form>	
+		</div>
+	</div>
+</div>
 
 	<div class="divider"></div>
 
-	<div id="memberships">
-			<div id="membershipImg"></div>
+	
+		<div id="memberships">
 			<div id="membershipText"><h2>MEMBERSHIPS
 			ARE DUE! </h2>
 			<p>You get to be a TRAA member for a whole year for only $25! Your membership also adds another voice to our efforts in protecting and enhancing aquatic habitats in the London & area community.
-			You’ve taken a lot of enjoyment from this unique fishery. It’s time togive back by being a part of the solution.</p></div>
+			You’ve taken a lot of enjoyment from this unique fishery. It’s time to give back by being a part of the solution.</p></div>
 		</div>
 
 	<div class="divider"></div>
-	
-	<div class="title">
-		<h2>FUNDRAISING</h2>
-	</div>
 
 	<div id="fundraiser">
+		<div id="fundraiserBlurb">
+			<div class="title">
+				<h2>FUNDRAISING</h2>
+			</div>
 		<h2>Efforts are underway to get the $$$ we need to continue many of the TRAA's most vital projects:</h2>
 			<div id="fundraiserImgs">
-				<div class="fundraiserImg"></div>
-				<div class="fundraiserImg"></div>
-				<div class="fundraiserImg"></div>
+				<div class="fundraiserImg"><img src="images/fund1.png" alt="Trout Hatchery"></div>
+				<div class="fundraiserImg"><img src="images/fund2.png" alt="Salmonid Monitoring"></div>
+				<div class="fundraiserImg"><img src="images/fund3.png" alt="Komoka Hydrological"></div>
 			</div>
 			<div id="fundraiserTitles">
 				<div class="fundraiserTitle"><p>Improvements to the TRAA Trout Hatchery</p></div>
@@ -97,28 +119,32 @@
 			<div id="fundraiserText">
 			<p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
 		</div>
+		</div>
+
 	
-	<div id="footerNav">
-		<div>
+	<div id="footer">
+		<div id="footerNav">
 			<ul>
-				<li><a href="#">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li>•</li>
-				<li><a href="#">About Us</a></li>
+				<li><a href="about.html">About Us</a></li>
 				<li>•</li>
-				<li><a href="#">Past Events</a></li>
+				<li><a href="events.html">Past Events</a></li>
 				<li>•</li>
-				<li><a href="#">Projects</a></li>
+				<li><a href="projects.html">Projects</a></li>
 				<li>•</li>
-				<li><a href="#">Contact Us</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
 				<li>•</li>
-				<li><a href="#">More</a></li>
+				<li><a href="more.html">More</a></li>
 				<li>•</li>
-				<li><a href="#">Return To Top</a></li>
-			</ul>
+				<li class="FButton"><a href="#">Return To Top</a></li>
+				<li><form><input type="search" placeholder="Search..."></form></li>
+				<li class="Fbutton"><a href="#">Search</a></li>
+				</ul>
 		</div>
 	</div>
-</div>
 
+</div>
 	<!-- Content goes here -->
 		<script src="js/main.js"></script>
 </body>
