--- a/index.html
+++ b/index.html
@@ -241,17 +241,17 @@
 	<div id="footer">
 		<div id="footerNav">
 			<ul>
-				<li><a href="#">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li>•</li>
-				<li><a href="#">About Us</a></li>
+				<li><a href="about.html">About Us</a></li>
 				<li>•</li>
-				<li><a href="#">Past Events</a></li>
+				<li><a href="events.html">Past Events</a></li>
 				<li>•</li>
-				<li><a href="#">Projects</a></li>
+				<li><a href="projects.html">Projects</a></li>
 				<li>•</li>
-				<li><a href="#">Contact Us</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
 				<li>•</li>
-				<li><a href="#">More</a></li>
+				<li><a href="more.html">More</a></li>
 				<li>•</li>
 				<li class="FButton"><a href="#">Return To Top</a></li>
 				<li><form><input type="search" placeholder="Search..."></form></li>
@@ -259,7 +259,6 @@
 				</ul>
 		</div>
 	</div>
-
 
 </div>
 
