--- a/Events.html
+++ b/Events.html
@@ -10,7 +10,7 @@
 <div id="siteContainer">
 	<div id="mainNav">
 		<div id="logoContainer">
-			<img src="images/traa_logo.svg" alt=" traa logo">
+		<img src="images/traa_logo.svg" alt=" traa logo">
 		</div>
 		<nav>
 			<ul>
@@ -18,13 +18,13 @@
 				<li>•</li>
 				<li><a href="about.html">About Us</a></li>
 				<li>•</li>
-				<li><a href="#">Past Events</a></li>
+				<li><a href="events.html">Past Events</a></li>
 				<li>•</li>
-				<li><a href="#">Projects</a></li>
+				<li><a href="projects.html">Projects</a></li>
 				<li>•</li>
-				<li><a href="#">Contact Us</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
 				<li>•</li>
-				<li><a href="#">More</a></li>
+				<li><a href="more.html">More</a></li>
 				<li>•</li>
 				<li><form><input type="search" placeholder="Search..."></form></li>
 				<li id="Sbutton"><a href="#">Search</a></li>
@@ -32,23 +32,223 @@
 		</nav>
 	</div>
 
-	<section id="titleSection">
+	
+
+<div class="extraSpace">
+	<div id="eventCon">
+		<section id="titleSection">
 		<div id="eventTitles">
 			<h1>TRAA PAST EVENTS</h1>
 			<h2> Participate, Help Out, Have Fun </h2>
 			<h3> Events $ Activities are what the TRAA's all About!</h3>
 		</div>
 	</section>
+		<div class="eventBox"> 
+			<div class="eventImages">
+				<img src="images/event1.png" alt="trees">
+				<img src="images/event2.png" alt="canoe under bridge">
+				<img src="images/event3.png" alt="bridge and river">	
+			</div>
+			<div class="eventText">
+				<div class="boxText">
+					<p>Stream Habitat Work Party, October 13, 2018</p></div>
+				<div class="boxText">
+					<p>Annual TRAA Paddle & Fish, July 14, 2018</p></div>
+				<div class="boxText">
+					<p>Stream Habitat Work Party, July 12, 2018</p></div>
+			</div>
+			<div class="eventButtons">
+				<div class="eventButton">
+					<a href="#">See More</a></div>
+				<div class="eventButton">
+					<a href="#">See More</a></div>
+				<div class="eventButton">
+					<a href="#">See More</a></div>
+			</div>
+		</div>
+	
+		<div class="eventBox"> 
+			<div class="eventImages">
+				<img src="images/event4.png" alt="broken roof">
+				<img src="images/event5.png" alt="kids in river">
+				<img src="images/event6.png" alt="London Show">	
+			</div>
+			<div class="eventText">
+				<div class="boxText">
+					<p>Work Party Hatchery Roof Repair, June 30, 2018</p></div>
+				<div class="boxText">
+					<p>Rainbow Trout Release June 23 2018</p></div>
+				<div class="boxText">
+					<p>TRAA Showtime, Feb 23-25 2017</p></div>
+			</div>
+			<div class="eventButtons">
+				<div class="eventButton">
+					<a href="#">See More</a></div>
+				<div class="eventButton">
+					<a href="#">See More</a></div>
+				<div class="eventButton">
+					<a href="#">See More</a></div>
+			</div>
+		</div>
+
+		<div class="eventBox"> 
+			<div class="eventImages">
+				<img src="images/event7.png" alt="guys release fish">
+				<img src="images/event8.png" alt="family in river">
+				<img src="images/event9.png" alt="family on dock">	
+			</div>
+			<div class="eventText">
+				<div class="boxText">
+					<p>Rainbow Trout Release June 16 2017</p></div>
+				<div class="boxText">
+					<p>Brook Trout Release May 17 2017</p></div>
+				<div class="boxText">
+					<p>Family Fishing Day Fanshawe C.A July 9 2016</p></div>
+			</div>
+			<div class="eventButtons">
+				<div class="eventButton">
+					<a href="#">See More</a></div>
+				<div class="eventButton">
+					<a href="#">See More</a></div>
+				<div class="eventButton">
+					<a href="#">See More</a></div>
+			</div>
+		</div>
+
+		<div class="eventBox"> 
+			<div class="eventImages">
+				<img src="images/event10.png" alt="guys with bucket">
+				<img src="images/event11.png" alt="river clean-up">
+				<img src="images/event12.png" alt="angling sport logo">	
+			</div>
+			<div class="eventText">
+				<div class="boxText">
+					<p>Brown Trout Release May 2 2016</p></div>
+				<div class="boxText">
+					<p>Thames River Clean-Up May 7 2016</p></div>
+				<div class="boxText">
+					<p>Angling Sports BBQ May 7 2016</p></div>
+			</div>
+			<div class="eventButtons">
+				<div class="eventButton">
+					<a href="#">See More</a></div>
+				<div class="eventButton">
+					<a href="#">See More</a></div>
+				<div class="eventButton">
+					<a href="#">See More</a></div>
+			</div>
+		</div>
+
+		<div class="eventBox"> 
+			<div class="eventImages">
+				<img src="images/event13.png" alt="wooden stairs">
+				<img src="images/event14.png" alt="family canoe">
+				<img src="images/event15.png" alt="father daughter fishing">	
+			</div>
+			<div class="eventText">
+				<div class="boxText">
+					<p>TRAA Projects Trout Hatchery Interior & Stairway Update</p></div>
+				<div class="boxText">
+					<p>3rd Annual TRAA Paddle & Fish July 18 2015</p></div>
+				<div class="boxText">
+					<p>Family Fishing Day Fanshawe C.A July 11 2015</p></div>
+			</div>
+			<div class="eventButtons">
+				<div class="eventButton">
+					<a href="#">See More</a></div>
+				<div class="eventButton">
+					<a href="#">See More</a></div>
+				<div class="eventButton">
+					<a href="#">See More</a></div>
+			</div>
+		</div>
+
+
+		<div class="eventBox"> 
+			<div class="eventImages">
+				<img src="images/event16.png" alt="movie cover">
+				<img src="images/event17.png" alt="children with bucket">
+				<img src="images/event18.png" alt="steelhead fish">	
+			</div>
+			<div class="eventText">
+				<div class="boxText">
+					<p>TRAA Presents Film DamNation @ Wolfe Performance Hall June 18 2015</p></div>
+				<div class="boxText">
+					<p>Rainbox Trout Release June 22 2015</p></div>
+				<div class="boxText">
+					<p>Steelhead Tagging and Monitoring Finish</p></div>
+			</div>
+			<div class="eventButtons">
+				<div class="eventButton">
+					<a href="#">See More</a></div>
+				<div class="eventButton">
+					<a href="#">See More</a></div>
+				<div class="eventButton">
+					<a href="#">See More</a></div>
+			</div>
+		</div>
 
 	
-	<div class="eventCon">
-		<div class="eventImages">
-			<img src="images/event1.png" alt="trees">
-			<img src="images/event2.png" alt="canoe under bridge">
-			<img src="images/event3.png" alt="bridge and river">	
+		<div class="eventBox"> 
+			<div class="eventImages">
+				<img src="images/event19.png" alt="workers and new equipment">
+				<img src="images/event20.png" alt="baby fish">	
+			</div>
+			<div class="eventText">
+				<div class="boxText">
+					<p>TRAA Hatchery Equipment Upgrades & Building Renovations</p></div>
+				<div class="boxText">
+					<p>Rainbow Trout Release</p></div>
+				
+			</div>
+			<div class="eventButtons">
+				<div class="eventButton">
+					<a href="#">See More</a></div>
+				<div class="eventButton">
+					<a href="#">See More</a></div>
+			</div>
 		</div>
-		<div class="eventText">
-			<
+	</div>
+</div>
+
+
+	
+
+	<div class="divider"></div>
+
+		<div class="divider"></div>
+
+		<div id="memberships">
+			<div id="membershipText"><h2>MEMBERSHIPS
+			ARE DUE! </h2>
+			<p>You get to be a TRAA member for a whole year for only $25! Your membership also adds another voice to our efforts in protecting and enhancing aquatic habitats in the London & area community.
+			You’ve taken a lot of enjoyment from this unique fishery. It’s time to give back by being a part of the solution.</p></div>
+		</div>
+
+	<div class="divider"></div>
+
+	<div id="fundraiser">
+		<div id="fundraiserBlurb">
+			<div class="title">
+				<h2>FUNDRAISING</h2>
+			</div>
+		<h2>Efforts are underway to get the $$$ we need to continue many of the TRAA's most vital projects:</h2>
+			<div id="fundraiserImgs">
+				<div class="fundraiserImg"><img src="images/fund1.png" alt="Trout Hatchery"></div>
+				<div class="fundraiserImg"><img src="images/fund2.png" alt="Salmonid Monitoring"></div>
+				<div class="fundraiserImg"><img src="images/fund3.png" alt="Komoka Hydrological"></div>
+			</div>
+			<div id="fundraiserTitles">
+				<div class="fundraiserTitle"><p>Improvements to the TRAA Trout Hatchery</p></div>
+				<div class="fundraiserTitle"><p>Continuation of the Salmonid Monitoring Program</p></div>
+				<div class="fundraiserTitle"><p>Funding the Komoka Creek Hydrological Study</p></div>
+			</div>
+			<div id="fundraiserText">
+			<p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
+		</div>
+		</div>
+				
+			
 
 
 
