--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 <div id="siteContainer">
-	<div id="mainNav">
+		<div id="mainNav">
 		<div id="logoContainer">
-			<img src="images/traa_logo.svg" alt=" traa logo">
+		<img src="images/traa_logo.svg" alt=" traa logo">
 		</div>
 		<nav>
 			<ul>
@@ -18,13 +18,13 @@
 				<li>•</li>
 				<li><a href="about.html">About Us</a></li>
 				<li>•</li>
-				<li><a href="#">Past Events</a></li>
+				<li><a href="events.html">Past Events</a></li>
 				<li>•</li>
-				<li><a href="#">Projects</a></li>
+				<li><a href="projects.html">Projects</a></li>
 				<li>•</li>
-				<li><a href="#">Contact Us</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
 				<li>•</li>
-				<li><a href="#">More</a></li>
+				<li><a href="more.html">More</a></li>
 				<li>•</li>
 				<li><form><input type="search" placeholder="Search..."></form></li>
 				<li id="Sbutton"><a href="#">Search</a></li>
