more work on css, events finished and more.html started

--- a/Events.html
+++ b/Events.html
@@ -32,22 +32,23 @@
 		</nav>
 	</div>
 
-	
 
 <div class="extraSpace">
 	<div id="eventCon">
 		<section id="titleSection">
-		<div id="eventTitles">
+		<div class="title">
 			<h1>TRAA PAST EVENTS</h1>
-			<h2> Participate, Help Out, Have Fun </h2>
-			<h3> Events $ Activities are what the TRAA's all About!</h3>
+		</div>
+		<div class="subtitle">
+			<h2> Participate, Help Out, Have Fun! </h2>
+			<h3> Events & Activities are what the TRAA's all About!</h3>
 		</div>
 	</section>
 		<div class="eventBox"> 
 			<div class="eventImages">
-				<img src="images/event1.png" alt="trees">
-				<img src="images/event2.png" alt="canoe under bridge">
-				<img src="images/event3.png" alt="bridge and river">	
+				<img src="images/event1.png" alt="trees" class="eventImg">
+				<img src="images/event2.png" alt="canoe under bridge" class="eventImg">
+				<img src="images/event3.png" alt="bridge and river" class="eventImg">	
 			</div>
 			<div class="eventText">
 				<div class="boxText">
@@ -69,9 +70,9 @@
 	
 		<div class="eventBox"> 
 			<div class="eventImages">
-				<img src="images/event4.png" alt="broken roof">
-				<img src="images/event5.png" alt="kids in river">
-				<img src="images/event6.png" alt="London Show">	
+				<img src="images/event4.png" alt="broken roof" class="eventImg">
+				<img src="images/event5.png" alt="kids in river" class="eventImg">
+				<img src="images/event6.png" alt="London Show" class="eventImg">	
 			</div>
 			<div class="eventText">
 				<div class="boxText">
@@ -93,9 +94,9 @@
 
 		<div class="eventBox"> 
 			<div class="eventImages">
-				<img src="images/event7.png" alt="guys release fish">
-				<img src="images/event8.png" alt="family in river">
-				<img src="images/event9.png" alt="family on dock">	
+				<img src="images/event7.png" alt="guys release fish" class="eventImg">
+				<img src="images/event8.png" alt="family in river" class="eventImg">
+				<img src="images/event9.png" alt="family on dock" class="eventImg">	
 			</div>
 			<div class="eventText">
 				<div class="boxText">
@@ -117,9 +118,9 @@
 
 		<div class="eventBox"> 
 			<div class="eventImages">
-				<img src="images/event10.png" alt="guys with bucket">
-				<img src="images/event11.png" alt="river clean-up">
-				<img src="images/event12.png" alt="angling sport logo">	
+				<img src="images/event10.png" alt="guys with bucket" class="eventImg">
+				<img src="images/event11.png" alt="river clean-up" class="eventImg">
+				<img src="images/event12.png" alt="angling sport logo" class="eventImg">	
 			</div>
 			<div class="eventText">
 				<div class="boxText">
@@ -141,9 +142,9 @@
 
 		<div class="eventBox"> 
 			<div class="eventImages">
-				<img src="images/event13.png" alt="wooden stairs">
-				<img src="images/event14.png" alt="family canoe">
-				<img src="images/event15.png" alt="father daughter fishing">	
+				<img src="images/event13.png" alt="wooden stairs" class="eventImg">
+				<img src="images/event14.png" alt="family canoe" class="eventImg">
+				<img src="images/event15.png" alt="father daughter fishing" class="eventImg">	
 			</div>
 			<div class="eventText">
 				<div class="boxText">
@@ -166,9 +167,9 @@
 
 		<div class="eventBox"> 
 			<div class="eventImages">
-				<img src="images/event16.png" alt="movie cover">
-				<img src="images/event17.png" alt="children with bucket">
-				<img src="images/event18.png" alt="steelhead fish">	
+				<img src="images/event16.png" alt="movie cover" class="eventImg">
+				<img src="images/event17.png" alt="children with bucket" class="eventImg">
+				<img src="images/event18.png" alt="steelhead fish" class="eventImg">	
 			</div>
 			<div class="eventText">
 				<div class="boxText">
@@ -191,8 +192,8 @@
 	
 		<div class="eventBox"> 
 			<div class="eventImages">
-				<img src="images/event19.png" alt="workers and new equipment">
-				<img src="images/event20.png" alt="baby fish">	
+				<img src="images/event19.png" alt="workers and new equipment" class="eventImg">
+				<img src="images/event20.png" alt="baby fish" class="eventImg">	
 			</div>
 			<div class="eventText">
 				<div class="boxText">
@@ -246,49 +247,29 @@
 			<div id="fundraiserText">
 			<p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
 		</div>
-		</div>
-				
-			
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	<div id="footerNav">
-		<div>
+	</div>
+	
+	<div id="footer">
+		<div id="footerNav">
 			<ul>
-				<li><a href="#">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li>•</li>
-				<li><a href="#">About Us</a></li>
+				<li><a href="about.html">About Us</a></li>
 				<li>•</li>
-				<li><a href="#">Past Events</a></li>
+				<li><a href="events.html">Past Events</a></li>
 				<li>•</li>
-				<li><a href="#">Projects</a></li>
+				<li><a href="projects.html">Projects</a></li>
 				<li>•</li>
-				<li><a href="#">Contact Us</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
 				<li>•</li>
-				<li><a href="#">More</a></li>
+				<li><a href="more.html">More</a></li>
 				<li>•</li>
-				<li><a href="#">Return To Top</a></li>
-			</ul>
+				<li class="FButton"><a href="#">Return To Top</a></li>
+				<li><form><input type="search" placeholder="Search..."></form></li>
+				<li class="Fbutton"><a href="#">Search</a></li>
+				</ul>
 		</div>
 	</div>
-</div>
 
 	<!-- Content goes here -->
 		<script src="js/main.js"></script>
