--- a/Events.html
+++ b/Events.html
@@ -59,12 +59,21 @@
 					<p>Stream Habitat Work Party, July 12, 2018</p></div>
 			</div>
 			<div class="eventButtons">
-				<div class="eventButton">
-					<a href="#">See More</a></div>
-				<div class="eventButton">
-					<a href="#">See More</a></div>
-				<div class="eventButton">
-					<a href="#">See More</a></div>
+				<div class="buttonCon">
+				<div class="linkB button">
+					<a href="#">See More</a>
+				</div>
+				</div>
+				<div class="buttonCon">
+				<div class="linkB button">
+					<a href="#">See More</a>
+				</div>
+				</div>
+				<div class="buttonCon">
+				<div class="linkB button">
+					<a href="#">See More</a>
+				</div>
+				</div>
 			</div>
 		</div>
 	
@@ -83,12 +92,21 @@
 					<p>TRAA Showtime, Feb 23-25 2017</p></div>
 			</div>
 			<div class="eventButtons">
-				<div class="eventButton">
-					<a href="#">See More</a></div>
-				<div class="eventButton">
-					<a href="#">See More</a></div>
-				<div class="eventButton">
-					<a href="#">See More</a></div>
+				<div class="buttonCon">
+				<div class="linkB button">
+					<a href="#">See More</a>
+				</div>
+				</div>
+				<div class="buttonCon">
+				<div class="linkB button">
+					<a href="#">See More</a>
+				</div>
+				</div>
+				<div class="buttonCon">
+				<div class="linkB button">
+					<a href="#">See More</a>
+				</div>
+				</div>
 			</div>
 		</div>
 
@@ -107,12 +125,21 @@
 					<p>Family Fishing Day Fanshawe C.A July 9 2016</p></div>
 			</div>
 			<div class="eventButtons">
-				<div class="eventButton">
-					<a href="#">See More</a></div>
-				<div class="eventButton">
-					<a href="#">See More</a></div>
-				<div class="eventButton">
-					<a href="#">See More</a></div>
+				<div class="buttonCon">
+				<div class="linkB button">
+					<a href="#">See More</a>
+				</div>
+				</div>
+				<div class="buttonCon">
+				<div class="linkB button">
+					<a href="#">See More</a>
+				</div>
+				</div>
+				<div class="buttonCon">
+				<div class="linkB button">
+					<a href="#">See More</a>
+				</div>
+				</div>
 			</div>
 		</div>
 
@@ -131,12 +158,21 @@
 					<p>Angling Sports BBQ May 7 2016</p></div>
 			</div>
 			<div class="eventButtons">
-				<div class="eventButton">
-					<a href="#">See More</a></div>
-				<div class="eventButton">
-					<a href="#">See More</a></div>
-				<div class="eventButton">
-					<a href="#">See More</a></div>
+				<div class="buttonCon">
+				<div class="linkB button">
+					<a href="#">See More</a>
+				</div>
+				</div>
+				<div class="buttonCon">
+				<div class="linkB button">
+					<a href="#">See More</a>
+				</div>
+				</div>
+				<div class="buttonCon">
+				<div class="linkB button">
+					<a href="#">See More</a>
+				</div>
+				</div>
 			</div>
 		</div>
 
@@ -155,12 +191,21 @@
 					<p>Family Fishing Day Fanshawe C.A July 11 2015</p></div>
 			</div>
 			<div class="eventButtons">
-				<div class="eventButton">
-					<a href="#">See More</a></div>
-				<div class="eventButton">
-					<a href="#">See More</a></div>
-				<div class="eventButton">
-					<a href="#">See More</a></div>
+				<div class="buttonCon">
+				<div class="linkB button">
+					<a href="#">See More</a>
+				</div>
+				</div>
+				<div class="buttonCon">
+				<div class="linkB button">
+					<a href="#">See More</a>
+				</div>
+				</div>
+				<div class="buttonCon">
+				<div class="linkB button">
+					<a href="#">See More</a>
+				</div>
+				</div>
 			</div>
 		</div>
 
@@ -180,12 +225,21 @@
 					<p>Steelhead Tagging and Monitoring Finish</p></div>
 			</div>
 			<div class="eventButtons">
-				<div class="eventButton">
-					<a href="#">See More</a></div>
-				<div class="eventButton">
-					<a href="#">See More</a></div>
-				<div class="eventButton">
-					<a href="#">See More</a></div>
+				<div class="buttonCon">
+				<div class="linkB button">
+					<a href="#">See More</a>
+				</div>
+				</div>
+				<div class="buttonCon">
+				<div class="linkB button">
+					<a href="#">See More</a>
+				</div>
+				</div>
+				<div class="buttonCon">
+				<div class="linkB button">
+					<a href="#">See More</a>
+				</div>
+				</div>
 			</div>
 		</div>
 
@@ -203,10 +257,14 @@
 				
 			</div>
 			<div class="eventButtons">
-				<div class="eventButton">
+				<div class="buttonCon">
+				<div class="linkB button">
 					<a href="#">See More</a></div>
-				<div class="eventButton">
+				</div>
+				<div class="buttonCon">
+				<div class="linkB button">
 					<a href="#">See More</a></div>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -233,7 +291,7 @@
 			<div class="title">
 				<h2>FUNDRAISING</h2>
 			</div>
-		<h2>Efforts are underway to get the $$$ we need to continue many of the TRAA's most vital projects:</h2>
+		<h2>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h2>
 			<div id="fundraiserImgs">
 				<div class="fundraiserImg"><img src="images/fund1.png" alt="Trout Hatchery"></div>
 				<div class="fundraiserImg"><img src="images/fund2.png" alt="Salmonid Monitoring"></div>
@@ -266,8 +324,7 @@
 				<li>•</li>
 				<li class="FButton"><a href="#">Return To Top</a></li>
 				<li><form><input type="search" placeholder="Search..."></form></li>
-				<li class="Fbutton"><a href="#">Search</a></li>
-				</ul>
+				<li><button class="sbutton"><a href="#">Search</a></button></li>
 		</div>
 	</div>
 
