--- a/contact.html
+++ b/contact.html
@@ -83,6 +83,8 @@
 
 				<label for="message">Message</label>
 				<input type="text" id="message" name="message" placeholder="Enter your message..">
+
+				<input type="submit" name="submit">
 			</form>	
 		</div>
 	</div>
@@ -105,7 +107,7 @@
 			<div class="title">
 				<h2>FUNDRAISING</h2>
 			</div>
-		<h2>Efforts are underway to get the $$$ we need to continue many of the TRAA's most vital projects:</h2>
+		<h2>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h2>
 			<div id="fundraiserImgs">
 				<div class="fundraiserImg"><img src="images/fund1.png" alt="Trout Hatchery"></div>
 				<div class="fundraiserImg"><img src="images/fund2.png" alt="Salmonid Monitoring"></div>
@@ -139,7 +141,7 @@
 				<li>•</li>
 				<li class="FButton"><a href="#">Return To Top</a></li>
 				<li><form><input type="search" placeholder="Search..."></form></li>
-				<li class="Fbutton"><a href="#">Search</a></li>
+				<li><button class="sbutton"><a href="#">Search</a></button></li>
 				</ul>
 		</div>
 	</div>
