--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
 			<div id="heroSlogan1"><p>Welcome to the Thames River Anglers Association</p></div>
 			<div id="heroSlogan2"><p>Dedication Today for Tomorrow</p></div>
 			</div>
+
+			<div id="heroArrows">
+				<div id="leftArrow"><a href="#"><</a></div>
+			</div>
+			<div id="heroArrows">
+				<div id="rightArrow"><a href="#">></a></div>
+			</div>
 		</div>
 
 			<div id="missionBG">
@@ -63,7 +70,7 @@
 			<div class="title">
 				<h2>FUNDRAISING</h2>
 			</div>
-		<h2>Efforts are underway to get the $$$ we need to continue many of the TRAA's most vital projects:</h2>
+		<h2>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h2>
 			<div id="fundraiserImgs">
 				<div class="fundraiserImg"><img src="images/fund1.png" alt="Trout Hatchery"></div>
 				<div class="fundraiserImg"><img src="images/fund2.png" alt="Salmonid Monitoring"></div>
@@ -255,7 +262,7 @@
 				<li>•</li>
 				<li class="FButton"><a href="#">Return To Top</a></li>
 				<li><form><input type="search" placeholder="Search..."></form></li>
-				<li class="Fbutton"><a href="#">Search</a></li>
+				<li><button class="sbutton"><a href="#">Search</a></button></li>
 				</ul>
 		</div>
 	</div>
