--- a/more.html
+++ b/more.html
@@ -423,7 +423,7 @@
 			
 			<div class="subtitle"><h3>Disclaimer</h3></div>
 			<div id="disclaimer">
-				<p></p>
+				<p>The links appearing on this page have been included for the interest of TRAA members and other like-minded individuals. We do our best to monitor what these sites offer as content. If you are concerned with any aspect of any of the linked sites, please contact the <a href="#">Webmaster</a>. Sites linked to this page that are deemed unsuitable for any reason at the sole discretion of the TRAA, will be removed without notice or explanation. Like-minded organizations wishing to have their sites linked to this page may contact the Webmaster. Your site's suitability for linking to this page is a decision made solely and strictly by the TRAA.</p>
 			</div>
 
 		</div>
@@ -446,7 +446,7 @@
 			<div class="title">
 				<h2>FUNDRAISING</h2>
 			</div>
-		<h2>Efforts are underway to get the $$$ we need to continue many of the TRAA's most vital projects:</h2>
+		<h2>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h2>
 			<div id="fundraiserImgs">
 				<div class="fundraiserImg"><img src="images/fund1.png" alt="Trout Hatchery"></div>
 				<div class="fundraiserImg"><img src="images/fund2.png" alt="Salmonid Monitoring"></div>
@@ -480,7 +480,7 @@
 				<li>•</li>
 				<li class="FButton"><a href="#">Return To Top</a></li>
 				<li><form><input type="search" placeholder="Search..."></form></li>
-				<li class="Fbutton"><a href="#">Search</a></li>
+				<li><button class="sbutton"><a href="#">Search</a></button></li>
 				</ul>
 		</div>
 	</div>
