--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,9 @@
 	<div id="cont2">
 		<div id="cont2TextCon">
 			<p>Come and talk to us at a TRAA General Meeting Guests are welcome!
-			<p>The TRAA meets every second Wednesday of each month. We always try to get the meetings started by 7:00pm so try to be there a few minutes beforehand. The venue is the Western Ontario Fish & Game Protective Association's clubhouse located just east of the Dearness Home on Southdale Road (East), on the North side of Southdale Road. The address is 790 Southdale Road East, London, Ontario.</p>
+			<p>The TRAA meets every second Wednesday of each month. We always try to get the meetings started by 7:00pm so try to be there a few minutes beforehand.</p>
+			<p>The venue is the Western Ontario Fish & Game Protective Association's clubhouse located just east of the Dearness Home on Southdale Road (East), on the North side of Southdale Road.</p> 
+			<p>The address is 790 Southdale Road East, London, Ontario.</p>
 			<p>Note: Every now and then we have "off-site" meetings. For example, the July and August meetings are "fishing meetings" so we won't be at WOFGPA clubhouse. Stay on top of these changes by visiting this Web site often.</p>
 			<p>TRAA SnailMail Send all those cards and letters (and cheques!) to:
 				Thames River Anglers Association
@@ -66,6 +68,9 @@
 				London, Ontario
 				N6G 0B9 
 			</p>
+			<div class="buttonCon">
+					<div class="linkB button"><a href="https://www.facebook.com/groups/4TRAA/">TRAA Facebook Page</a></div>
+			</div>
 		</div>	
 		<div id="contactForm">
 			<form>
@@ -92,13 +97,26 @@
 
 	<div class="divider"></div>
 
-	
-		<div id="memberships">
-			<div id="membershipText"><h2>MEMBERSHIPS
-			ARE DUE! </h2>
-			<p>You get to be a TRAA member for a whole year for only $25! Your membership also adds another voice to our efforts in protecting and enhancing aquatic habitats in the London & area community.
-			You’ve taken a lot of enjoyment from this unique fishery. It’s time to give back by being a part of the solution.</p></div>
+<div class="extraSpace">
+		<div id="memberCon">
+			<div class="title">
+				<h2>Thames River Anglers Association Memberships</h2>
+			</div>
+			<div id="memberTop">
+				<div id="memImageCon">
+					<img src="images/cont1.png" alt="traa members">
+					<img src="images/cont2.png" alt="foggy lake">
+				</div>
+				<div id="memTextCon">
+						<div id="deal"><h3>This is the BEST membership deal you can buy!</h3></div>
+						<p>Some people have a hard time paying to volunteer. Well if that's you, just give us $25.00 every year and we won't bug you - much. You'll get a card that says your a TRAA member and you'll get periodic updates on what you're missing out on.</p>
+						<div id="deal">Participate, Help Out, Have Fun and give a little bit back to the Thames River watershed!</div>
+						<p>Not only does $25.00 get you in good standing as a TRAA member, it also includes everyone in your immediate family!</p>
+						<p>The best way to join up is to attend a TRAA event or email us for other options.</p>
+			</div>
 		</div>
+	</div>
+</div>
 
 	<div class="divider"></div>
 
