--- a/index.html
+++ b/index.html
@@ -56,12 +56,17 @@
 		
 		<div class="divider"></div>
 
+		<div class="extraSpace">
 		<div id="memberships">
 			<div id="membershipText"><h2>MEMBERSHIPS
 			ARE DUE! </h2>
 			<p>You get to be a TRAA member for a whole year for only $25! Your membership also adds another voice to our efforts in protecting and enhancing aquatic habitats in the London & area community.
 			You’ve taken a lot of enjoyment from this unique fishery. It’s time to give back by being a part of the solution.</p></div>
+			<div class="MbuttonCon">
+				<div class="linkB button"><a href="contact.html">Become a Member!</a></div>
+			</div>
 		</div>
+	</div>
 
 	<div class="divider"></div>
 
