--- a/projTem.html
+++ b/projTem.html
@@ -34,23 +34,20 @@
 
 
 	<div class="extraSpace">
-		<div id="about">
+		<div class="project">
 			<div class="title">
-				<h2>About The Thames River Anglers Association</h2>
+				<h2>Project Name</h2>
 			</div>
-			<section id="about1">
-				<div id="aboutImageCon">
-					<img src="images/about1.png" alt="river clean-up">
-					<img src="images/about2.png" alt="scenic river release">
+			<section class="project1">
+				<div class="projectImageCon">
+					<div class="projimage"><img src=""></div>
+					<div class="projimage"><img src=""></div>
+					<div class="projimage"><img src=""></div>
 				</div>
-				<div id="about1TextCon">
-						<div id="subtitle"><p>The TRAA Works at a Grassroots Level Within the Thames River Watershed to</p></div>
-						<p>• Protect, enhance and regenerate a viable, multi-species, year-round fishery.</p>
-						<p>• Promote and participate in environmental clean-up, pollution control and rehabilitation.</p>
-						<p>• Breed, relocate and stock to re-establish or augment appropriate species of fish.</p>
-						<p>• Promote environmentally sound sport fishing practices.</p>
-						<p>• Form partnerships with community businesses, government agencies, special interest groups, landowners, and other stakeholders in the Thames River watershed.</p>
-						<p>• Increase public awareness of the unique diversity of the Thames River Watershed, its challenges, its recreational opportunities and its vital importance to our community.</p>
+				<div class="project1TextCon">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste reprehenderit unde eius laborum exercitationem. Beatae rem officia repellendus doloribus voluptate at veniam explicabo, a numquam ducimus quis distinctio nesciunt harum?</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti possimus repellendus, illo, animi suscipit fugit praesentium iure, enim qui ad minus veniam tempora error doloribus quod nemo dolores? Minus, voluptatem!</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium odit mollitia dolores voluptate quis asperiores laborum nulla commodi voluptatibus, fugit ipsum vero a facere odio ea consequuntur, nostrum aliquam repellat.</p>
 				</div>
 			</section>
 		</div>
@@ -59,16 +56,17 @@
 	<div class="divider"></div>
 		
 <div class="extraSpace">
-	<div id="about2">
-		<div id="about2TextCon">
-			<p>In the spring of 1986 the TRAA was formed by anglers concerned with the state of the fishery in the Thames River watershed, particularly the dwindling smallmouth bass population in the North Thames River.</p>
-			<p>The TRAA is not a fishing club, although most members are anglers and share fishing as a common interest. We are a "hands on" environmental group who likes to work at a grass roots level.</p>
-			<p>The TRAA is a volunteer organization, governed by a formal constitution and by-laws. An elected Executive, with the guidence of the General Membership, sets the policies and direction for the TRAA.</p>
-			<p>The TRAA has a history of always having a core group of active members supported by those who just want to be part of the solution. Either way, every member of the TRAA is active in their advocacy for the health of the Thames River watershed and its inhbitants.</p>
+	<div class="project2">
+		<div class="project2TextCon">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero dolore nostrum eum error, nobis tempora exercitationem soluta ut vel, minus dolorum adipisci quia dolor placeat, aliquam numquam beatae eius qui.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi accusantium eveniet obcaecati unde omnis, fugit modi dolorum officia sunt iure excepturi! Voluptatibus, ab ipsa sapiente sed illo pariatur, aut. Blanditiis.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam neque repellendus nobis cupiditate eaque, distinctio corporis numquam tempore nesciunt quia, cum ullam sapiente recusandae quasi saepe vel minima laudantium voluptatem.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis impedit rem, ullam molestiae rerum illo distinctio laborum deserunt, in voluptates, ratione unde iusto qui esse, sit cum error voluptatem doloremque..</p>
 		</div>	
-		<div id="about2ImageCon">
-			<img src="images/about3.png" alt="young fish">
-			<img src="images/about4.png" alt="stream close-up">
+		<div class="project2ImageCon">
+			<div class="projimage"><img src=""></div>
+			<div class="projimage"><img src=""></div>
+			<div class="projimage"><img src=""></div>
 		</div>
 	</div>
 </div>
