--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
 					</div>
 					<div class="projBottom2"><h3>Salmonid Monitoring Program</h3>
 					<p> Spring 2013 will be our fourth year of this 5-year project. Here's an overview of what happened over a few weekends in the Spring of 2012 when TRAA members and personnel from the Upper Thames River Conservation Authority (UTRCA) waded in for Year 3 of our 5-year Salmonid Tagging and Monitoring Program </p>
-					<a href="#">...Read More</a>
+					<a href="projTem.html">...Read More</a>
 					</div>
 				</div>
 
@@ -65,17 +65,17 @@
 					<div class="projBottom2"><h3>TRAA Trout Hatchery</h3>	
 					<p> Rearing both brown and rainbow trout.
 					The TRAA first began rearing rainbow trout in an outdoor upwelling incubation box back in 1986. Since then we've successfully taken on both brown trout and brook trout eggs</p>
-					<a href="#">...Read More</a>
+					<a href="projTem.html">...Read More</a>
 					</div>
 				</div>
 
 		<div class="subtitle"><h2>Project Archives</h2></div>		
 			<div id="projectArchives">
 				<div class="buttonCon">
-					<div class="linkB button"><a href="#">Walleye Hatchery</a></div>
+					<div class="linkB button"><a href="projTem.html">Walleye Hatchery</a></div>
 				</div>
 				<div class="buttonCon">
-					<div class="linkB button"><a href="#">Stream Rehabilitation</a></div>
+					<div class="linkB button"><a href="projTem.html">Stream Rehabilitation</a></div>
 				</div>
 			</div>
 		</div>
@@ -88,12 +88,17 @@
 
 	<div class="divider"></div>
 
+		<div class="extraSpace">
 		<div id="memberships">
 			<div id="membershipText"><h2>MEMBERSHIPS
 			ARE DUE! </h2>
 			<p>You get to be a TRAA member for a whole year for only $25! Your membership also adds another voice to our efforts in protecting and enhancing aquatic habitats in the London & area community.
 			You’ve taken a lot of enjoyment from this unique fishery. It’s time to give back by being a part of the solution.</p></div>
+			<div class="MbuttonCon">
+				<div class="linkB button"><a href="contact.html">Become a Member!</a></div>
+			</div>
 		</div>
+	</div>
 
 	<div class="divider"></div>
 
