i hate mac right now

--- a/projects.html
+++ b/projects.html
@@ -81,9 +81,24 @@
 		</div>
 	</div>
 				
+<div class="divider"></div>
 
-
-
+<div class="extraSpace">
+	<div id="dataCon">
+		<div id="dataBlurb">
+			<div class="title">
+				<h2>Data Visuals</h2>
+			</div>
+		
+			<div id="dataImgs">
+				<div class="dataImg"><img src="images/dataviz1.png" alt="graph"></div>
+				<div class="dataImg"><img src="images/dataviz2.png" alt="graph"></div>
+				<div class="dataImg"><img src="images/dataviz3.png" alt="graph"></div>
+			</div>
+			
+		</div>
+	</div>
+</div>
 
 
 	<div class="divider"></div>
